wui reenable old participants page and remove not implemented pages from sidenav for release

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -101,10 +101,10 @@
     <li><div class="divider"></div></li>
     <li id="{{coursesId}}"><a href="{{coursesLink}}" class="waves-effect sidenav-close">{{{coursesIcon}}}{{coursesLabel}}</a></li>
     {{#isTeacherOrAdmin}}
-        <li id="{{libId}}"><a href="{{libLink}}" class="waves-effect sidenav-close">{{{libIcon}}}{{libLabel}}</a></li>
+<!--        <li id="{{libId}}"><a href="{{libLink}}" class="waves-effect sidenav-close">{{{libIcon}}}{{libLabel}}</a></li>-->
     {{/isTeacherOrAdmin}}
     {{#isAdmin}}
-        <li id="{{articlesId}}"><a href="{{articlesLink}}" class="waves-effect sidenav-close">{{{articlesIcon}}}{{articlesLabel}}</a></li>
+<!--        <li id="{{articlesId}}"><a href="{{articlesLink}}" class="waves-effect sidenav-close">{{{articlesIcon}}}{{articlesLabel}}</a></li>-->
         <li><a id="{{newCourseLinkId}}" class="waves-effect sidenav-close">{{{newCourseIcon}}}{{newCourseLabel}}</a></li>
     {{/isAdmin}}
 </script>
@@ -118,7 +118,7 @@
         <li id="{{participantsId}}"><a href="{{participantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{participantsLabel}}</a></li>
     {{/isTeacherOrAdmin}}
     {{#isAdmin}}
-        <li><a class="waves-effect sidenav-close">{{{addExerciseIcon}}}{{addExerciseLabel}}</a></li>
+<!--        <li><a class="waves-effect sidenav-close">{{{addExerciseIcon}}}{{addExerciseLabel}}</a></li>-->
         <li><a class="waves-effect sidenav-close modal-trigger" href="#new-exercise-modal">{{{newExerciseIcon}}}{{newExerciseLabel}}</a></li>
     {{/isAdmin}}
 </script>
