wui add random suffix to keycloak comment to not fail version_static_files

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -1365,7 +1365,7 @@
 </script>
 
 
-<!--<script src="https://idp.lahendus.ut.ee/auth/js/keycloak.js"></script>-->
+<!--<script src="https://idp.lahendus.ut.ee/auth/js/keycloak-tmp.js"></script>-->
 <script src="/static/js/keycloak.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.js"></script>
