wui keycloak silent sso html add doctype and html lang attr

--- a/wui/static/keycloak-silent-sso-redirect.html
+++ b/wui/static/keycloak-silent-sso-redirect.html
@@ -1,5 +1,6 @@
 <!-- From: https://www.keycloak.org/docs/latest/securing_apps/#_javascript_adapter -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <body>
 <script>
     parent.postMessage(location.href, location.origin)
