--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -174,6 +174,20 @@
     </div>
 </script>
 
+<script id="t-c-page-tabs" type="text/x-handlebars">
+    <ul id="{{tabsId}}" class="tabs ez-tabs">
+        <!-- On one line, avoid whitespace between items -->
+        {{#tabs}}<li class="tab"><a href="#{{id}}" class="{{#isPreselected}}active{{/isPreselected}}">{{label}}</a></li>{{/tabs}}
+    </ul>
+    <ez-tabs-content>
+        {{#tabs}}
+        <ez-tab-content id="{{id}}">
+            <ez-dst id="{{compDstId}}"></ez-dst>
+        </ez-tab-content>
+        {{/tabs}}
+    </ez-tabs-content>
+</script>
+
 <script id="t-c-code-editor" type="text/x-handlebars">
     <div class="editor-wrapper">
         <div class="editor-top">
@@ -669,17 +683,11 @@
 </script>
 
 <script id="t-c-participants" type="text/x-handlebars">
-    <ez-dst id="{{breadcrumbsId}}"></ez-dst>
-
-    <div class="title-wrap">
+    <div class="title-wrap no-crumb">
         <h2 class="title">{{title}}</h2>
     </div>
 
-    <h4 class="subsection">{{teachersLabel}}</h4>
-    <ez-dst id="{{teachersListId}}"></ez-dst>
-
-    <h4 class="subsection">{{studentsLabel}}</h4>
-    <ez-dst id="{{studentsListId}}"></ez-dst>
+    <ez-participants-list id="{{tabsId}}"></ez-participants-list>
 
     <ez-dst class="add-students-modal" id="{{addStudentsModalId}}"></ez-dst>
 </script>
