wui ezcoll fix sorter radio selecting

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -288,7 +288,7 @@
                 {{#sorters}}
                     <li>
                         <label>
-                            <input ez-sorter="{{id}}" name="sorter" type="radio" {{#isSelected}}checked{{/isSelected}}/>
+                            <input ez-sorter="{{id}}" name="sorter-{{collId}}" type="radio" {{#isSelected}}checked{{/isSelected}}/>
                             <span>{{label}}</span>
                         </label>
                     </li>
