--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -643,51 +643,34 @@
 
 <script id="t-c-grades-table" type="text/x-handlebars">
     <div class="grades-wrap">
-        <div class="pre-table-wrap">
-            {{#hasPagination}}
-                <ez-pagination>
-                    <ez-pageinfo>{{pageStart}} &#8212; {{pageEnd}}{{pageTotalLabel}}{{pageTotal}}</ez-pageinfo>
-                    <ez-pagenav>
-                        <ez-pagebtn class="go-first waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">first_page</i></ez-pagebtn
-                        ><ez-pagebtn class="go-back waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">navigate_before</i></ez-pagebtn
-                    ><ez-pagebtn class="go-forward waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">navigate_next</i></ez-pagebtn
-                    ><ez-pagebtn class="go-last waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">last_page</i></ez-pagebtn>
-                    </ez-pagenav>
-                </ez-pagination>
-            {{/hasPagination}}
-        </div>
         <div class="grade-table-wrap">
             <table class="colored truncated-ex">
                 <thead><tr>
                     <th class="header-spacer"></th>
+                    <th><span class="text" title="{{exerciseCountTitle}}">Σ ({{exerciseCount}})</span></th>
                     {{#exercises}}
-                        <th><a class="wrap uncolored"><span class="text">{{exerciseTitle}}</span></a></th>
+                        <th><a class="wrap uncolored {{#invisible}}invisible{{/invisible}}" href="{{href}}"><span class="text" title="{{title}}">{{title}}</span></a></th>
                     {{/exercises}}
                 </tr></thead>
                 <tbody>
+                <tr>
+                    <td class="sticky-col neutral" title="{{studentCountTitle}}">Σ ({{studentCount}})</td>
+                    <td class="neutral"></td>
+                    {{#exerciseSummaries}}
+                        <td class="neutral" title="{{exerciseSummaryTitle}}">{{finishedCount}}</td>
+                    {{/exerciseSummaries}}
+                </tr>
                 {{#students}}
                     <tr>
-                        <td class="student truncate">{{name}}</td>
+                        <td class="sticky-col neutral truncate" title="{{name}}">{{name}}</td>
+                        <td class="neutral" title="{{studentSummaryTitle}}">{{finishedCount}}</td>
                         {{#grades}}
-                            <td class="{{#finished}}finished{{/finished}} {{#unfinished}}unfinished{{/unfinished}} {{#unstarted}}unstarted{{/unstarted}} {{#ungraded}}ungraded{{/ungraded}}">{{grade}}</td>
+                            <td class="{{#finished}}finished{{/finished}} {{#unfinished}}unfinished{{/unfinished}} {{#unstarted}}unstarted{{/unstarted}} {{#ungraded}}ungraded{{/ungraded}}">{{grade}}{{#teacherGraded}}*{{/teacherGraded}}</td>
                         {{/grades}}
                     </tr>
                 {{/students}}
                 </tbody>
             </table>
-        </div>
-        <div class="post-table-wrap">
-            {{#hasPagination}}
-                <ez-pagination>
-                    <ez-pageinfo>{{pageStart}} &#8212; {{pageEnd}}{{pageTotalLabel}}{{pageTotal}}</ez-pageinfo>
-                    <ez-pagenav>
-                        <ez-pagebtn class="go-first waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">first_page</i></ez-pagebtn
-                        ><ez-pagebtn class="go-back waves-effect waves-green" {{^canGoBack}}disabled{{/canGoBack}}><i class="material-icons">navigate_before</i></ez-pagebtn
-                    ><ez-pagebtn class="go-forward waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">navigate_next</i></ez-pagebtn
-                    ><ez-pagebtn class="go-last waves-effect waves-green" {{^canGoForward}}disabled{{/canGoForward}}><i class="material-icons">last_page</i></ez-pagebtn>
-                    </ez-pagenav>
-                </ez-pagination>
-            {{/hasPagination}}
         </div>
     </div>
 </script>
@@ -1417,6 +1400,7 @@
 <script src="https://cdn.jsdelivr.net/npm/codemirror-asciidoc@1.0.4/lib/asciidoc.min.js"></script>
 <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/idea.min.css">
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+<script src="/static/js/csv.js"></script>
 <script src="/static/js/wui.js"></script>
 
 <div id="date"></div> <!-- Temporary, for automatic generation time -->
