--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -205,7 +205,7 @@
 </script>
 
 <script id="t-c-modal" type="text/x-handlebars">
-    <div id="{{id}}" class="modal">
+    <div id="{{id}}" class="modal {{#wide}}wide{{/wide}}">
         <div class="modal-content">
             {{#title}}<h4>{{title}}</h4>{{/title}}
             {{#bodyComps}}
@@ -422,7 +422,7 @@
 </script>
 
 <script id="t-c-button" type="text/x-handlebars">
-    <button id="{{id}}" class="{{#isPrimary}}btn waves-light{{/isPrimary}} {{#isSecondary}}secondary-btn btn-flat{{/isSecondary}} waves-effect">
+    <button id="{{id}}" class="{{#isPrimary}}btn waves-light{{/isPrimary}} {{#isSecondary}}secondary-btn btn-flat{{/isSecondary}} {{#isDanger}}btn danger waves-light{{/isDanger}} waves-effect">
         <ez-btn-content>{{text}}</ez-btn-content>
     </button>
 </script>
