EZ-1347 add old participants page link to sidenav

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -116,6 +116,7 @@
     {{#isTeacherOrAdmin}}
         <li id="{{gradesId}}"><a href="{{gradesLink}}" class="waves-effect sidenav-close">{{{gradesIcon}}}{{gradesLabel}}</a></li>
         <li id="{{participantsId}}"><a href="{{participantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{participantsLabel}}</a></li>
+        <li id="{{oldParticipantsId}}"><a href="{{oldParticipantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{oldParticipantsLabel}}<span class="badge">vana</span></a></li>
     {{/isTeacherOrAdmin}}
     {{#isAdmin}}
 <!--        <li><a class="waves-effect sidenav-close">{{{addExerciseIcon}}}{{addExerciseLabel}}</a></li>-->
