EZ-1347 wui modal add fixed footer capability and add to add students modal ;)

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -206,7 +206,7 @@
 </script>
 
 <script id="t-c-modal" type="text/x-handlebars">
-    <div id="{{id}}" class="modal {{#wide}}wide{{/wide}}">
+    <div id="{{id}}" class="modal {{#fixedFooter}}fixed-footer{{/fixedFooter}} {{#wide}}wide{{/wide}}">
         <div class="modal-content">
             {{#title}}<h4>{{title}}</h4>{{/title}}
             {{#bodyComps}}
