wui participants add create group modal

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -686,6 +686,7 @@
     <ez-participants-list id="{{tabsId}}"></ez-participants-list>
 
     <ez-dst class="add-students-modal" id="{{addStudentsModalId}}"></ez-dst>
+    <ez-dst id="{{createGroupModalId}}"></ez-dst>
 </script>
 
 
