EZ-1458 scheduled course exercise publishing

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -1056,6 +1056,7 @@
     {{#graderType}}<p class="subheading-item"><span class="subheading">{{graderTypeLabel}}:</span>{{graderType}}</p>{{/graderType}}
     {{#threshold}}<p class="subheading-item"><span class="subheading">{{thresholdLabel}}:</span>{{threshold}}%</p>{{/threshold}}
     {{#studentVisible}}<p class="subheading-item"><span class="subheading">{{studentVisibleLabel}}:</span>{{studentVisible}}</p>{{/studentVisible}}
+    {{#studentVisibleFromTime}}<p class="subheading-item"><span class="subheading">{{studentVisibleFromTimeLabel}}:</span>{{studentVisibleFromTime}}</p>{{/studentVisibleFromTime}}
     {{#assStudentVisible}}<p class="subheading-item"><span class="subheading">{{assStudentVisibleLabel}}:</span>{{assStudentVisible}}</p>{{/assStudentVisible}}
     {{#lastModified}}<p class="subheading-item"><span class="subheading">{{lastModifiedLabel}}:</span>{{lastModified}}</p>{{/lastModified}}
     <h2>{{exerciseTitle}}</h2>
