--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -115,8 +115,8 @@
     <li id="{{exercisesId}}"><a href="{{exercisesLink}}" class="waves-effect sidenav-close">{{{exercisesIcon}}}{{exercisesLabel}}</a></li>
     {{#isTeacherOrAdmin}}
         <li id="{{gradesId}}"><a href="{{gradesLink}}" class="waves-effect sidenav-close">{{{gradesIcon}}}{{gradesLabel}}</a></li>
-        <li id="{{participantsId}}"><a href="{{participantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{participantsLabel}}</a></li>
-        <li id="{{oldParticipantsId}}"><a href="{{oldParticipantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{oldParticipantsLabel}}<span class="badge">vana</span></a></li>
+        <li id="{{participantsId}}"><a href="{{participantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{participantsLabel}}<span class="badge">{{newLabel}}</span></a></li>
+        <li id="{{oldParticipantsId}}"><a href="{{oldParticipantsLink}}" class="waves-effect sidenav-close">{{{participantsIcon}}}{{oldParticipantsLabel}}</a></li>
     {{/isTeacherOrAdmin}}
     {{#isAdmin}}
 <!--        <li><a class="waves-effect sidenav-close">{{{addExerciseIcon}}}{{addExerciseLabel}}</a></li>-->
